Added image folder
Removed ink specific styling classes.

Added custom header & styled

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                         <table class="twelve columns">
                           <tr>
 
-                            <td class="six sub-columns">
-                              <img src="http://placehold.it/200x50">
+                            <td class="four sub-columns">
                             </td>
-                            <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
-                              <span class="template-label">HERO</span>
+                            <td class="four sub-columns">
+                              <img src="images/wanna-logo-email.png">
+                            </td>
+                            <td class="four sub-columns last">
                             </td>
                             <td class="expander"></td>
 
