--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
 			<td class="center" align="center" valign="top">
         <center>
 
+       <table class="row header">
+        <tr>
+          <td class="wrapper">
+            <table class="four columns">
+              <tr>
+                <td class="">
+                </td>
+                <td class="expander"></td>
+              </tr>
+            </table>
+          </td>
+          <td class="wrapper">
+            <table class="four columns">
+              <tr>
+                <td class="">
+                  <img src="images/wanna-logo-email.png">
+                </td>
+                <td class="expander"></td>
+              </tr>
+            </table>
+          </td>
+          <td class="wrapper last">
+            <table class="four columns">
+              <tr>
+                <td class="">
+                </td>
+                <td class="expander"></td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
 
-          <table class="row header">
-            <tr>
-              <td class="center" align="center">
-                <center>
 
-                  <table class="container">
-                    <tr>
-                      <td class="wrapper last">
-
-                        <table class="twelve columns">
-                          <tr>
-
-                            <td class="four sub-columns">
-                            </td>
-                            <td class="four sub-columns">
-                              <img src="images/wanna-logo-email.png">
-                            </td>
-                            <td class="four sub-columns last">
-                            </td>
-                            <td class="expander"></td>
-
-                          </tr>
-                        </table>
-
-                      </td>
-                    </tr>
-                  </table>
-
-                </center>
-              </td>
-            </tr>
-          </table>
-          <br>
 
           <table class="container">
             <tr>
@@ -74,7 +74,6 @@
                     </td>
                   </tr>
                 </table>
-
                 <table class="row callout">
                   <tr>
                     <td class="wrapper last">
@@ -117,67 +116,39 @@
 
                 <table class="row">
                   <tr>
-                    <td class="wrapper last">
-
-                      <table class="three columns">
-                        <tr>
-                          <td>
-
-                            <table class="button">
-                              <tr>
-                                <td>
-                                  <a href="#">Click Me!</a>
-                                </td>
-                              </tr>
-                            </table>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-
-                <table class="row footer">
-                  <tr>
                     <td class="wrapper">
 
-                      <table class="six columns">
+                      <table class="four columns">
                         <tr>
                           <td class="left-text-pad">
 
-                            <h5>Connect With Us:</h5>
+                                            <table class="button radius alert">
+                                              <tr>
+                                                <td>
+                                                  <a href="#">Click Me!</a>
+                                                </td>
+                                              </tr>
+                                            </table>
 
-                            <table class="tiny-button facebook">
-                              <tr>
-                                <td>
-                                  <a href="#">Facebook</a>
-                                </td>
-                              </tr>
-                            </table>
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
 
-                            <br>
+                    </td>
+                    <td class="wrapper">
 
-                            <table class="tiny-button twitter">
-                              <tr>
-                                <td>
-                                  <a href="#">Twitter</a>
-                                </td>
-                              </tr>
-                            </table>
+                      <table class="four columns">
+                        <tr>
+                          <td class="left-text-pad">
 
-                            <br>
-
-                            <table class="tiny-button google-plus">
-                              <tr>
-                                <td>
-                                  <a href="#">Google +</a>
-                                </td>
-                              </tr>
-                            </table>
+                                            <table class="button radius alert">
+                                              <tr>
+                                                <td>
+                                                  <a href="#">Click Me!</a>
+                                                </td>
+                                              </tr>
+                                            </table>
 
                           </td>
                           <td class="expander"></td>
@@ -187,12 +158,17 @@
                     </td>
                     <td class="wrapper last">
 
-                      <table class="six columns">
+                      <table class="four columns">
                         <tr>
-                          <td class="last right-text-pad">
-                            <h5>Contact Info:</h5>
-                            <p>Phone: 408.341.0600</p>
-                            <p>Email: <a href="mailto:hseldon@trantor.com">hseldon@trantor.com</a></p>
+                          <td class="right-text-pad">
+
+                                            <table class="button radius alert">
+                                              <tr>
+                                                <td>
+                                                  <a href="#">Click Me!</a>
+                                                </td>
+                                              </tr>
+                                            </table>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -203,9 +179,20 @@
                 </table>
 
 
-                <table class="row">
+
+                <!-- container end below -->
+              </td>
+            </tr>
+          </table>
+
+                <table class="row footer"> <!-- Styles go on the row -->
                   <tr>
-                    <td class="wrapper last">
+                    <td class="center" align="center"> <!-- Center the container -->
+                      <center>
+
+                        <table class="container"> <!-- Container restricts the content width -->
+                          <tr>
+                            <td class="wrapper last"> <!-- Wrapper stays on the inner table -->
 
                       <table class="twelve columns">
                         <tr>
@@ -218,15 +205,14 @@
                         </tr>
                       </table>
 
+                            </td>
+                          </tr>
+                        </table>
+
+                      </center>
                     </td>
                   </tr>
                 </table>
-
-                <!-- container end below -->
-              </td>
-            </tr>
-          </table>
-
         </center>
 			</td>
 		</tr>
