--- a/index.html
+++ b/index.html
@@ -14,38 +14,37 @@
 			<td class="center" align="center" valign="top">
         <center>
 
-       <table class="row header">
-        <tr>
-          <td class="wrapper">
-            <table class="four columns">
-              <tr>
-                <td class="">
-                </td>
-                <td class="expander"></td>
-              </tr>
-            </table>
-          </td>
-          <td class="wrapper">
-            <table class="four columns">
-              <tr>
-                <td class="">
-                  <img src="images/wanna-logo-email.png">
-                </td>
-                <td class="expander"></td>
-              </tr>
-            </table>
-          </td>
-          <td class="wrapper last">
-            <table class="four columns">
-              <tr>
-                <td class="">
-                </td>
-                <td class="expander"></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
+
+
+        <table class="row header">
+          <tr>
+            <td class="wrapper last">
+
+              <table class="twelve columns">
+                <tr>
+                  <td class="four sub-columns">
+
+
+
+                  </td>
+                  <td class="four sub-columns">
+
+                    <img src="images/wanna-logo-email.png">
+
+                  </td>
+                  <td class="four sub-columns last">
+
+
+
+                  </td>
+                  <td class="expander"></td>
+                </tr>
+              </table>
+
+            </td>
+
+          </tr>
+        </table>
 
 
 
@@ -60,12 +59,15 @@
 
                       <table class="twelve columns">
                         <tr>
-                          <td>
-
+                          <td class="text-pad">
                             <h1>Hi, Elijah Baily</h1>
                 						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                						<img width="580" height="300" src="http://placehold.it/580x300">
-
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        <tr>
+                          <td>
+                            <img src="https://image.tmdb.org/t/p/w1280/7mgKeg18Qml5nJQa56RBZO7dIu0.jpg">
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -99,9 +101,10 @@
 
                       <table class="twelve columns">
                         <tr>
-                          <td>
+                          <td class="text-pad">
+                            <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
 
-                            <h3>Title Ipsum <small>This is a note.</small></h3>
+                            <h3>Title Ipsum</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                           </td>
@@ -114,6 +117,73 @@
                 </table>
 
 
+        <!-- 3 COLUMN POSTER START -->
+        <table class="row">
+          <tr>
+            <td class="wrapper last">
+
+              <table class="twelve columns">
+                <tr>
+                  <td class="four sub-columns first">
+                    <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                  </td>
+                  <td class="four sub-columns">
+                    <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                  </td>
+                  <td class="four sub-columns last">
+                    <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                  </td>
+                  <td class="expander"></td>
+                </tr>
+              </table>
+
+            </td>
+
+          </tr>
+        </table>
+        <!-- 3 COLUMN POSTER START -->
+
+                <!-- 3 COLUMN POSTER START -->
+                <table class="row">
+                  <tr>
+                    <td class="wrapper">
+
+                      <table class="four columns">
+                        <tr>
+                          <td>
+                            <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                    <td class="wrapper">
+
+                      <table>
+                        <tr>
+                          <td class="text-pad">
+                            <img src="https://image.tmdb.org/t/p/w342/g5yIxuzZ3LFRxDa8SBQybJJhXng.jpg">
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                    <td class="wrapper last">
+
+                      <table class="four columns">
+                        <tr>
+                          <td>
+                            <img src="https://image.tmdb.org/t/p/w342/5G6kook6pUGrGZ99ciD4a7L1CIs.jpg">
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+                      </table>
+                      <!-- 3 COLUMN POSTER END -->
+
+
                 <table class="row">
                   <tr>
                     <td class="wrapper">
@@ -122,7 +192,7 @@
                         <tr>
                           <td class="left-text-pad">
 
-                                            <table class="button radius alert">
+                                            <table class="button radius wanna">
                                               <tr>
                                                 <td>
                                                   <a href="#">Click Me!</a>
@@ -142,7 +212,7 @@
                         <tr>
                           <td class="left-text-pad">
 
-                                            <table class="button radius alert">
+                                            <table class="button radius seenit">
                                               <tr>
                                                 <td>
                                                   <a href="#">Click Me!</a>
@@ -162,7 +232,7 @@
                         <tr>
                           <td class="right-text-pad">
 
-                                            <table class="button radius alert">
+                                            <table class="button radius dont">
                                               <tr>
                                                 <td>
                                                   <a href="#">Click Me!</a>
@@ -198,7 +268,7 @@
                         <tr>
                           <td align="center">
                             <center>
-                              <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></p>
+                              <small style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></small>
                             </center>
                           </td>
                           <td class="expander"></td>
