--- a/custom-test.html
+++ b/custom-test.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width"/>
   <link type="text/css" rel="stylesheet" href="styles.css">
-	<style>
+  <style>
   /* ADD STYLES TO HEAD BEFORE USING INLINER */
   </style>
 </head>
 <body>
-	<table class="body">
-		<tr>
-			<td class="center" align="center" valign="top">
+  <table class="body">
+    <tr>
+      <td class="center" align="center" valign="top">
         <center>
 
 
@@ -49,8 +49,8 @@
                       <table class="twelve columns">
                         <tr>
                           <td class="text-pad">
-                            <h1>Hi, Elijah Baily</h1>
-                						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                            <h1>Hi, CUSTOM TEXT</h1>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -105,6 +105,67 @@
                   </tr>
                 </table>
 
+
+
+        <table class="row">
+            <tr>
+              <td class="wrapper">
+                <table class="four columns">
+                  <tr>
+                    <td>
+                      <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                    </td>
+                    <td class="expander"></td>
+                  </tr>
+                </table>
+              </td>
+              <td class="wrapper">
+                <table class="four columns">
+                  <tr>
+                    <td>
+                      <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                    </td>
+                    <td class="expander"></td>
+                  </tr>
+                </table>
+              </td>
+              <td class="wrapper last">
+                <table class="four columns">
+                  <tr>
+                    <td>
+                      <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                    </td>
+                    <td class="expander"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+
+        <table class="row">
+            <tr>
+              <td class="wrapper">
+                <table class="eight columns">
+                  <tr>
+                    <td class="text-pad">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </td>
+                    <td class="expander"></td>
+                  </tr>
+                </table>
+              </td>
+              <td class="wrapper last">
+                <table class="four columns">
+                  <tr>
+                    <td>
+                      <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                    </td>
+                    <td class="expander"></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
 
         <!-- 3 COLUMN POSTER START -->
               <table class="row">
@@ -223,8 +284,8 @@
 
 
         </center>
-			</td>
-		</tr>
-	</table>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
