--- a/index.html
+++ b/index.html
@@ -1,230 +1,230 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width"/>
-  <link type="text/css" rel="stylesheet" href="styles.css">
-	<style>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width"/>
+    <link type="text/css" rel="stylesheet" href="ink.css">
+  <style>
   /* ADD STYLES TO HEAD BEFORE USING INLINER */
   </style>
 </head>
 <body>
-	<table class="body">
-		<tr>
-			<td class="center" align="center" valign="top">
+  <table class="body">
+    <tr>
+      <td class="center" align="center" valign="top">
         <center>
 
+          <table class="row header">
+            <tr>
+              <td class="center" align="center">
+                <center>
 
-        <!-- header start -->
-        <table class="row header">
-          <tr>
-            <td class="wrapper last">
-              <table class="twelve columns">
-                <tr>
-                  <td class="four sub-columns">
-                  </td>
-                  <td class="four sub-columns">
-                    <img src="images/wanna-logo-email.png">
-                  </td>
-                  <td class="four sub-columns last">
-                  </td>
-                  <td class="expander"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-        <!-- header end -->
+                  <table class="">
+                    <tr>
+                      <td class="wrapper last">
 
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="four sub-columns">
+                            </td>
+                            <td class="four sub-columns">
+                              <img src="images/wanna-logo-email.png">
+                            </td>
+                            <td class="four sub-columns last">
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+
+                      </td>
+                    </tr>
+                  </table>
+
+                </center>
+              </td>
+            </tr>
+          </table>
 
           <table class="container">
             <tr>
               <td>
 
-                <!-- body content start -->
-                <table class="row">
-                  <tr>
-                    <td class="wrapper last">
-
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="text-pad">
-                            <h1>Hi, Elijah Baily</h1>
-                						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <img src="https://image.tmdb.org/t/p/w1280/7mgKeg18Qml5nJQa56RBZO7dIu0.jpg">
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-                <table class="row callout">
-                  <tr>
-                    <td class="wrapper last">
-
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="panel">
-
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-                <table class="row">
-                  <tr>
-                    <td class="wrapper last">
-
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="text-pad">
-                            <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
-
-                            <h3>Title Ipsum</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                          </td>
-                          <td class="expander"></td>
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-
-        <!-- 3 COLUMN POSTER START -->
+              <!-- content start -->
               <table class="row">
                 <tr>
                   <td class="wrapper last">
 
                     <table class="twelve columns">
                       <tr>
-                        <td class="four sub-columns">
-                          <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
-                          <table class="button radius wanna">
-                            <tr>
-                              <td>
-                                <a href="#">Click Me Click Me!Click Me!!</a>
-                              </td>
-                            </tr>
-                          </table>
+                        <td class="text-pad">
+                          <h1>Welcome, Daneel Olivan</h1>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
                         </td>
-                        <td class="four sub-columns">
-                          <img src="https://image.tmdb.org/t/p/w342/g5yIxuzZ3LFRxDa8SBQybJJhXng.jpg">
-                          <table class="button radius seen">
+                        <td class="expander"></td>
+                      </tr>
+                       <tr>
+                        <td>
+                            <img src="https://image.tmdb.org/t/p/w1280/7mgKeg18Qml5nJQa56RBZO7dIu0.jpg">
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="panel">
+                          <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+
+               <!-- 3 poster start -->
+
+              <table class="row">
+                <tr>
+                  <td class="center" align="center">
+                    <center>
+
+                      <table class="">
+                        <tr>
+                          <td class="wrapper last">
+
+                            <table class="twelve columns">
+                              <tr>
+                                <td class="four sub-columns">
+                                  <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                                  <table class="button radius">
+                                    <tr>
+                                      <td class="wanna">
+                                        <a href="#">Wanna Watch</a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                                <td class="four sub-columns">
+                                  <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                                  <table class="button radius">
+                                    <tr>
+                                      <td class="seen">
+                                        <a href="#">Seen it</a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                                <td class="four sub-columns last">
+                                  <img src="https://image.tmdb.org/t/p/w342/1cFVCUYKSBuEUDoVftKvqcfuIgc.jpg">
+                                  <table class="button radius">
+                                    <tr>
+                                      <td class="dont">
+                                        <a href="#">Don't Wanna</a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                                <td class="expander"></td>
+                              </tr>
+                            </table>
+
+                          </td>
+                        </tr>
+                      </table>
+
+                    </center>
+                  </td>
+                </tr>
+              </table>
+              <!-- 3 poster END -->
+
+
+             <!-- 3 poster start -->
+
+              <table class="row">
+                 <tr>
+                  <td class="wrapper last">
+
+                    <table class="twelve columns">
+                        <tr>
+                          <td class=" user-center">
+
+                            <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+                  </td>
+                </tr>
+              </table>
+              <!-- 3 poster END -->
+
+              <table class="row">
+                <tr>
+                  <td class="wrapper last">
+
+                    <table class="twelve columns">
+                      <tr>
+                        <td class="text-pad">
+
+                          <img class="user-icon" src="https://s3.amazonaws.com/uifaces/faces/twitter/chloepark/128.jpg">
+
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet.</p>
+
+                          <table class="button radius">
                             <tr>
                               <td>
                                 <a href="#">Click Me!</a>
                               </td>
                             </tr>
                           </table>
-                        </td>
-                        <td class="four sub-columns last">
-                          <img src="https://image.tmdb.org/t/p/w342/5G6kook6pUGrGZ99ciD4a7L1CIs.jpg">
-                          <table class="button radius dont">
-                            <tr>
-                              <td>
-                                <a href="#">Click Me!</a>
-                              </td>
-                            </tr>
-                          </table>
+
                         </td>
                         <td class="expander"></td>
                       </tr>
                     </table>
 
                   </td>
-
                 </tr>
               </table>
-        <!-- 3 COLUMN POSTER END -->
 
-          <table class="row">
-            <tr>
-              <td class="wrapper">
-                <table class="nine columns">
-                  <tr>
-                    <td class="text-pad">
-                      <p>You have received this email because you signed up at <a href="http://www.wannawatch.it/">Wanna Watch It</a></p>
-                      <p>If you do not wish to receive any further emails <a href="#">Unsubscribe</a></p>
-                    </td>
-                    <td class="expander"></td>
-                  </tr>
-                </table>
-              </td>
-              <td class="wrapper last">
-                <table class="three columns">
-                  <tr>
-                    <td class="four sub-columns">
-                      <a href="https://www.facebook.com/wannawatch.it">
-                        <img class="center" src="images/facebook.png">
-                      </a>
-                    </td>
-                    <td class="four sub-columns">
-                      <a href="https://twitter.com/wannawatchit">
-                        <img  class="center" src="images/twitter.png">
-                      </a>
-                    </td>
-                    <td class="four sub-columns">
-                      <a href="http://www.pinterest.com/wannawatchit/">
-                        <img class="center" src="images/pinterest.png">
-                      </a>
-                    </td>
-                    <td class="expander"></td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
 
-                    <table class="row footer"> <!-- Styles go on the row -->
+
+
+              <br>
+              <br>
+              <!-- Legal + Unsubscribe -->
+              <table class="row footer">
+                <tr>
+                  <td class="wrapper last">
+
+                    <table class="twelve columns">
                       <tr>
-                        <td class="center" align="center"> <!-- Center the container -->
+                        <td align="center">
                           <center>
-                            <table>
-                              <tr>
-                                <td class="wrapper last"> <!-- Wrapper stays on the inner table -->
-                                  <table class="twelve columns">
-                                    <tr>
-                                      <td align="center">
-                                        <center>
-                                          <small style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></small>
-                                        </center>
-                                      </td>
-                                      <td class="expander"></td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                            </table>
+                            <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Unsubscribe</a></p>
                           </center>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
 
-                <!-- container end below -->
+                  </td>
+                </tr>
+              </table>
+
+              <!-- container end below -->
               </td>
             </tr>
           </table>
 
-
         </center>
-			</td>
-		</tr>
-	</table>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
