--- a/invite-with-movie.html
+++ b/invite-with-movie.html
@@ -119,7 +119,7 @@
                           <td class="right-text-pad center">
 
                             <img alt="Birdman poster" class="poster center" src="https://image.tmdb.org/t/p/w342/kG1UW1AHGEVj62YSfAiyx1qiVGI.jpg">
-                              <a href="#">Watch Trailer <img src="http://mailannarobinson.files.wordpress.com/2012/12/play-button.png" height="30" width="30" class="play-button center" ></a>
+                              <a href="#">Watch Trailer</a>
 
                           </td>
                           <td class="expander"></td>
